--- a/index.html
+++ b/index.html
@@ -1,12 +1,158 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HW-1</title>
   </head>
+
   <body>
-    <h1>Homework 1</h1>
+    <header>
+      <nav>
+        <a href="./index.html">WebStudio</a>
+
+        <ul>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./index.html">Портфоліо</a></li>
+          <li><a href="./index.html">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+
+    <main>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+
+      <section>
+        <ul>
+          <li>
+            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h2>ПУНКТУАЛЬНІСТЬ</h2>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <h2>ПЛАНУВАННЯ</h2>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/img1.jpg"
+              alt="робота-пк"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img2.jpg"
+              alt="робота-телефон"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img3.jpg"
+              alt="робота-планшет"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/product-designer.jpg"
+              alt="Product Designer"
+              width="270"
+              height="260"
+            />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/frontend-developer.jpg"
+              alt="Frontend Developer"
+              width="270"
+              height="260"
+            />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/marketing.jpg"
+              alt="Marketing"
+              width="270"
+              height="260"
+            />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/ui-designer.jpg"
+              alt="UI Designer"
+              width="270"
+              height="260"
+            />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <a href="/">
+        <img src="./images/logo.jpg" alt="logo picture" />
+      </a>
+
+      <address>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
