--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         <ul>
           <li><a href="./index.html">Студія</a></li>
-          <li><a href="./index.html">Портфоліо</a></li>
-          <li><a href="./index.html">Контакти</a></li>
+          <li><a href="#">Портфоліо</a></li>
+          <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
       <ul>
@@ -33,27 +33,27 @@
       <section>
         <ul>
           <li>
-            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+            <h3>увага до деталей</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h2>ПУНКТУАЛЬНІСТЬ</h2>
+            <h3>пунктуальнiсть</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h2>ПЛАНУВАННЯ</h2>
+            <h3>планування</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <h3>сучаснi технологiї</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -63,7 +63,7 @@
       </section>
 
       <section>
-        <h2>Чим ми займаємося</h2>
+        <h3>Чим ми займаємося</h3>
         <ul>
           <li>
             <img
@@ -93,7 +93,7 @@
       </section>
 
       <section>
-        <h2>Наша команда</h2>
+        <h3>Наша команда</h3>
         <ul>
           <li>
             <img
@@ -102,7 +102,7 @@
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
+            <h4>Ігор Дем'яненко</h4>
             <p>Product Designer</p>
           </li>
           <li>
@@ -112,7 +112,7 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Рєпіна</h3>
+            <h4>Ольга Рєпіна</h4>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -122,7 +122,7 @@
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
+            <h4>Микола Тарасов</h4>
             <p>Marketing</p>
           </li>
           <li>
@@ -132,7 +132,7 @@
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
+            <h4>Михайло Єрмаков</h4>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -140,16 +140,15 @@
     </main>
 
     <footer>
-      <a href="/">
-        <img src="./images/logo.jpg" alt="logo picture" />
-      </a>
+      <a href="./index.html">WebStudio</a>
 
       <address>
-        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="https://goo.gl/maps/5Nj7DeXVXqgo8Si49"
+              >м. Київ, пр-т Лесі Українки, 26</a>
           </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
